# open-cuncun

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  pyproject.toml  requirements.txt  run.py  run_scheduler.py  wsgi.py
.github/workflows/: ci.yml
app/: ai_engine.py  bootstrap.py  config.py  http_client.py  logger.py  main.py  observability.py  ops.py  prompt_builder.py  retrieval.py  search.py  security.py  time_utils.py  tools_registry.py  vision.py  voice_matcher.py  weather.py
app/application/: chat_orchestrator.py  command_service.py  context_assembler.py  memory_maintenance_service.py  memory_reflection_service.py  observation_media_service.py  observation_service.py  post_reply_jobs.py  proactive_chat_service.py  reminder_service.py  reply_service.py  reset_service.py
app/domain/: context_policy.py  memory_rules.py  observation_rules.py  query_intent.py  reply_mode.py  reply_text.py
app/entrypoints/: feishu_webhook.py  scheduler_runner.py
app/infrastructure/ai/: __init__.py  fallback_gateway.py  provider_health.py  provider_registry.py
app/infrastructure/feishu/: __init__.py  card_streamer.py  client.py  media_store.py  messenger.py
app/infrastructure/persistence/: _sqlite_common.py  sqlite_conversation_repo.py  sqlite_history_repo.py  sqlite_memory_repo.py  sqlite_observation_repo.py  sqlite_profile_repo.py  sqlite_settings_repo.py
app/infrastructure/vector/: chroma_audio_store.py  chroma_memory_store.py  embedding_gateway.py
app/presentation/cards/: __init__.py  assets.py  builders.py
app/presentation/formatters/: __init__.py  memory_formatter.py  status_formatter.py
app/presentation/parsers/: feishu_event_parser.py
data/prompts/: example_prompt_template.txt
docs/: ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  DEVNOTES.md  ISSUE_VALIDATION_2026-04-22.md  MODULES.md  OBSERVATION_SYSTEM.md  ONLINE_SMOKE_REPORT_TEMPLATE.md  PERFORMANCE_BOTTLENECK_ANALYSIS.md  PROJECT_HISTORY.md  READING_ORDER.md  README.md  STABILITY_CHECKLIST.md  TECHNICAL_EVOLUTION.md  knowledge.md
scripts/: verify.py  verify.sh
