[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feishu-ai-companion"
version = "5.7.1"
description = "Private Feishu chatbot companion with memory, retrieval, and voice reply workflows."
requires-python = ">=3.10,<3.13"
dependencies = [
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.13.3",
  "aiosignal==1.4.0",
  "annotated-types==0.7.0",
  "anyio==4.12.0",
  "APScheduler==3.11.2",
  "async-timeout==5.0.1",
  "attrs==25.4.0",
  "backoff==2.2.1",
  "bcrypt==5.0.0",
  "blinker==1.9.0",
  "build==1.3.0",
  "cachetools==6.2.4",
  "certifi==2026.1.4",
  "cffi==2.0.0",
  "charset-normalizer==3.4.4",
  "chromadb==1.4.0",
  "click==8.3.1",
  "coloredlogs==15.0.1",
  "cryptography==46.0.3",
  "dashscope==1.25.5",
  "distro==1.9.0",
  "durationpy==0.10",
  "exceptiongroup==1.3.1",
  "filelock==3.20.2",
  "fastembed==0.7.4",
  "Flask==3.1.2",
  "flatbuffers==25.12.19",
  "frozenlist==1.8.0",
  "fsspec==2025.12.0",
  "google-api-core==2.29.0",
  "google-api-python-client==2.188.0",
  "google-auth==2.46.0",
  "google-auth-httplib2==0.3.0",
  "google-auth-oauthlib==1.2.4",
  "googleapis-common-protos==1.72.0",
  "grpcio==1.76.0",
  "h11==0.16.0",
  "hf-xet==1.2.0",
  "httpcore==1.0.9",
  "httplib2==0.31.2",
  "httptools==0.7.1",
  "httpx==0.28.1",
  "huggingface_hub==1.2.3",
  "humanfriendly==10.0",
  "idna==3.11",
  "importlib_metadata==8.7.1",
  "importlib_resources==6.5.2",
  "itsdangerous==2.2.0",
  "Jinja2==3.1.6",
  "jiter==0.12.0",
  "jsonschema==4.25.1",
  "jsonschema-specifications==2025.9.1",
  "kubernetes==34.1.0",
  "lark-oapi==1.5.2",
  "markdown-it-py==4.0.0",
  "MarkupSafe==3.0.3",
  "mdurl==0.1.2",
  "mmh3==5.2.0",
  "mpmath==1.3.0",
  "multidict==6.7.0",
  "numpy==2.2.6",
  "oauthlib==3.3.1",
  "onnxruntime==1.23.2",
  "openai==2.14.0",
  "opentelemetry-api==1.39.1",
  "opentelemetry-exporter-otlp-proto-common==1.39.1",
  "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
  "opentelemetry-proto==1.39.1",
  "opentelemetry-sdk==1.39.1",
  "opentelemetry-semantic-conventions==0.60b1",
  "orjson==3.11.5",
  "overrides==7.7.0",
  "packaging==25.0",
  "posthog==5.4.0",
  "propcache==0.4.1",
  "proto-plus==1.27.0",
  "protobuf==6.33.2",
  "psutil==5.9.8",
  "pyasn1==0.6.1",
  "pyasn1_modules==0.4.2",
  "pybase64==1.4.3",
  "pycparser==2.23",
  "pycryptodome==3.23.0",
  "pydantic==2.12.5",
  "pydantic_core==2.41.5",
  "Pygments==2.19.2",
  "pyparsing==3.3.2",
  "PyPika==0.48.9",
  "pyproject_hooks==1.2.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.1",
  "python-json-logger==4.0.0",
  "PyYAML==6.0.3",
  "referencing==0.37.0",
  "requests==2.32.5",
  "requests-oauthlib==2.0.0",
  "requests-toolbelt==1.0.0",
  "rich==14.2.0",
  "rpds-py==0.30.0",
  "rsa==4.9.1",
  "schedule==1.2.2",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sympy==1.14.0",
  "tenacity==9.1.2",
  "tokenizers==0.22.2",
  "tomli==2.3.0",
  "tqdm==4.67.1",
  "typer==0.21.0",
  "typer-slim==0.21.0",
  "typing-inspection==0.4.2",
  "typing_extensions==4.15.0",
  "tzlocal==5.3.1",
  "uritemplate==4.2.0",
  "urllib3==2.3.0",
  "uvicorn==0.40.0",
  "uvloop==0.22.1",
  "watchdog==6.0.0",
  "watchfiles==1.1.1",
  "websocket-client==1.9.0",
  "websockets==15.0.1",
  "Werkzeug==3.1.4",
  "yarl==1.22.0",
  "zipp==3.23.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.13,<0.12",
]
server = [
  "gunicorn>=23,<24",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["app", "scripts"]
extend-exclude = [
  "backups",
  "data",
  "logs",
]

[tool.ruff.lint]
select = ["E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
